[tool.poetry]
name = "clau_lab"
version = "0.1.0"
description = "Just for having fun and exploring"
authors = ["María Claudia Rivera <mriveraprado@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
